Paper 1.26 update
Updated to 1.26 API calls and optimized listener